tests/errors/scalar_int_cast_rejected.dang
scalar URL

# Runtime materialization only supports String -> custom scalar casts.
pub url = 42 :: URL!
